refactor(ci): consolidate cleanup workflow deployment steps
Merge the two separate GitHub deployment cleanup steps (one for specific PR,
one for stale cleanup) into a single unified step. Both cases now use the
same logic: collect PR numbers from either input or file, then loop once to
clean deployments and environments.

--- a/.github/workflows/cleanup-hobby-preview.yml
+++ b/.github/workflows/cleanup-hobby-preview.yml
@@ -54,31 +54,36 @@ jobs:
                   DRY_RUN: ${{ inputs.dry_run || 'false' }}
               run: uv run bin/hobby-ci.py cleanup-stale
 
-            - name: Cleanup GitHub deployments for stale PRs
-              if: inputs.pr_number == ''
+            - name: Cleanup GitHub deployments and environments
               uses: actions/github-script@f28e40c7f34bde8b3046d885e986cb6290c5673b
               with:
                   script: |
                       const fs = require('fs');
 
-                      // Read cleaned PR numbers from file
-                      let cleanedPrs = [];
-                      try {
-                          const content = fs.readFileSync('/tmp/cleaned_prs.txt', 'utf8');
-                          cleanedPrs = content.split(',').filter(pr => pr.trim());
-                      } catch (e) {
-                          console.log('No cleaned PRs file found, skipping deployment cleanup');
+                      // Collect PR numbers to clean up from either input or stale cleanup output
+                      let prsToClean = [];
+                      const inputPr = '${{ inputs.pr_number }}';
+
+                      if (inputPr) {
+                          prsToClean = [inputPr];
+                      } else {
+                          // Read from file written by cleanup-stale
+                          try {
+                              const content = fs.readFileSync('/tmp/cleaned_prs.txt', 'utf8');
+                              prsToClean = content.split(',').filter(pr => pr.trim());
+                          } catch (e) {
+                              console.log('No cleaned PRs file found');
+                          }
+                      }
+
+                      if (prsToClean.length === 0) {
+                          console.log('No PRs to cleanup');
                           return;
                       }
 
-                      if (cleanedPrs.length === 0) {
-                          console.log('No PRs were cleaned up');
-                          return;
-                      }
+                      console.log(`Cleaning up GitHub deployments for PRs: ${prsToClean.join(', ')}`);
 
-                      console.log(`Cleaning up GitHub deployments for PRs: ${cleanedPrs.join(', ')}`);
-
-                      for (const prNumber of cleanedPrs) {
+                      for (const prNumber of prsToClean) {
                           const environment = `preview-pr-${prNumber}`;
                           console.log(`\nCleaning up ${environment}...`);
 
@@ -90,6 +95,8 @@ jobs:
                                   per_page: 100
                               });
 
+                              console.log(`  Found ${deployments.length} deployment(s)`);
+
                               for (const deployment of deployments) {
                                   try {
                                       await github.rest.repos.createDeploymentStatus({
@@ -97,7 +104,7 @@ jobs:
                                           repo: context.repo.repo,
                                           deployment_id: deployment.id,
                                           state: 'inactive',
-                                          description: 'Cleaned up by stale cleanup'
+                                          description: 'Preview cleanup'
                                       });
                                       await github.rest.repos.deleteDeployment({
                                           owner: context.repo.owner,
@@ -119,56 +126,4 @@ jobs:
                           } catch (error) {
                               console.log(`  Could not cleanup ${environment}: ${error.message}`);
                           }
-                      }
-
-            - name: Cleanup GitHub deployment and environment
-              if: inputs.pr_number != ''
-              uses: actions/github-script@f28e40c7f34bde8b3046d885e986cb6290c5673b
-              with:
-                  script: |
-                      const prNumber = '${{ inputs.pr_number }}';
-                      const environment = `preview-pr-${prNumber}`;
-
-                      console.log(`Cleaning up deployments for ${environment}`);
-
-                      const { data: deployments } = await github.rest.repos.listDeployments({
-                          owner: context.repo.owner,
-                          repo: context.repo.repo,
-                          environment: environment,
-                          per_page: 100
-                      });
-
-                      console.log(`Found ${deployments.length} deployments`);
-
-                      for (const deployment of deployments) {
-                          try {
-                              await github.rest.repos.createDeploymentStatus({
-                                  owner: context.repo.owner,
-                                  repo: context.repo.repo,
-                                  deployment_id: deployment.id,
-                                  state: 'inactive',
-                                  description: 'PR closed'
-                              });
-
-                              await github.rest.repos.deleteDeployment({
-                                  owner: context.repo.owner,
-                                  repo: context.repo.repo,
-                                  deployment_id: deployment.id
-                              });
-
-                              console.log(`Deleted deployment ${deployment.id}`);
-                          } catch (error) {
-                              console.log(`Could not delete deployment ${deployment.id}: ${error.message}`);
-                          }
-                      }
-
-                      try {
-                          await github.rest.repos.deleteAnEnvironment({
-                              owner: context.repo.owner,
-                              repo: context.repo.repo,
-                              environment_name: environment
-                          });
-                          console.log(`Deleted environment ${environment}`);
-                      } catch (error) {
-                          console.log(`Could not delete environment ${environment}: ${error.message}`);
                       }
