fix(bazel): add sdist wheel pre-build for Python 3.12 compatibility
Some packages (thrift, zstd, fastuuid, psycopg2-binary) only publish
sdist on PyPI and use distutils in setup.py. Python 3.12 removed
distutils from stdlib, so rules_python's pip can't build them.

Solution: pre-build wheels using uv (which has setuptools available)
and point pip.parse at /tmp/bazel-wheels via --find-links.

CI workflow updated to run `uv pip wheel` before bazel commands.

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,22 +1,22 @@
 load("@gazelle//:def.bzl", "gazelle")
-load("@rules_python//python/uv:lock.bzl", "lock")
 
 gazelle(
     name = "gazelle",
     gazelle = "@rules_python_gazelle_plugin//python:gazelle_binary",
 )
 
-# Generate requirements_lock.txt from pyproject.toml (including dev deps)
-# Run: bazel run //:requirements.update
-# Test: bazel test //:requirements_test
-lock(
+# Export requirements from frozen uv.lock to requirements_lock.txt
+# This respects the locked versions instead of re-resolving
+# Note: --no-hashes is used because uv export generates universal hashes
+# which don't match platform-specific wheels that bazel downloads
+genrule(
     name = "requirements",
-    srcs = ["pyproject.toml"],
-    out = "requirements_lock.txt",
-    args = ["--group", "dev"],
-    env = {
-        "PATH": "/opt/homebrew/bin:/usr/local/bin:/usr/bin:/bin",
-    },
+    srcs = [
+        "uv.lock",
+        "pyproject.toml",
+    ],
+    outs = ["requirements_lock.txt"],
+    cmd = "uv export --format requirements-txt --all-extras --group dev --no-hashes --directory $(RULEDIR)/../../../ > $@",
 )
 
 # gazelle:python_root
