--- a/common/bazel/BUILD.bazel
+++ b/common/bazel/BUILD.bazel
@@ -39,7 +39,85 @@ py_library(
         "@pypi//kafka_python",
         "@pypi//opentelemetry_api",
         "@pypi//opentelemetry_sdk",
+        "@pypi//nexus_rpc",
         "@pypi//temporalio",
         "@pypi//whitenoise",
+        "@pypi//aiohttp",
+        "@pypi//pyarrow",
+        "@pypi//aiokafka",
+        "@pypi//dagster",
+        "@pypi//psycopg_binary",
+        "@pypi//django_loginas",
+        "@pypi//social_auth_app_django",
+        "@pypi//django_filter",
+        "@pypi//django_axes",
+        "@pypi//django_otp",
+        "@pypi//django_two_factor_auth",
+        "@pypi//django_oauth_toolkit",
+        "@pypi//django_admin_inline_paginator",
+        "@pypi//django_linear_migrations",
+        "@pypi//dlt",
+        "@pypi//hogql_parser",
+        "@pypi//chdb",
+        "@pypi//s3fs",
+        "@pypi//paramiko",
+        "@pypi//sshtunnel",
+        "@pypi//google_cloud_bigquery",
+        "@pypi//google_cloud_bigquery_storage",
+        "@pypi//deltalake",
+        "@pypi//disposable_email_domains",
+        "@pypi//free_email_domains",
+        "@pypi//slack_sdk",
+        "@pypi//django_redis",
+        "@pypi//bingads",
+        "@pypi//google_ads",
+        "@pypi//gspread",
+        "@pypi//linkedin_api_client",
+        "@pypi//pymongo",
+        "@pypi//pymysql",
+        "@pypi//snowflake_connector_python",
+        "@pypi//stripe",
+        "@pypi//zxcvbn",
+        "@pypi//css_inline",
+        "@pypi//lxml",
+        "@pypi//tiktoken",
+        "@pypi//langchain",
+        "@pypi//langchain_openai",
+        "@pypi//token_bucket",
+        "@pypi//drf_extensions",
+        "@pypi//djangorestframework_dataclasses",
+        "@pypi//litellm",
+        "@pypi//geoip2",
+        "@pypi//google_genai",
+        "@pypi//brotli",
+        "@pypi//mimesis",
+        "@pypi//selenium",
+        "@pypi//webdriver_manager",
+        "@pypi//playwright",
+        "@pypi//retry",
+        "@pypi//aioboto3",
+        "@pypi//databricks_sql_connector",
+        "@pypi//databricks_sdk",
+        "@pypi//anthropic",
+        "@pypi//modal",
+        "@pypi//djangorestframework_csv",
+        "@pypi//python_snappy",
+        "@pypi//scikit_learn",
+        "@pypi//mistralai",
+        "@pypi//nanoid",
+        "@pypi//langchain_anthropic",
+        "@pypi//elevenlabs",
+        "@pypi//langgraph",
+        "@pypi//jsonref",
+        "@pypi//azure_core",
+        "@pypi//azure_ai_inference",
+        "@pypi//glom",
+        "@pypi//pymediainfo",
+        "@pypi//natsort",
+        "@pypi//markdown_to_mrkdwn",
+        "@pypi//python3_saml",
+        "@pypi//nh3",
+        "@pypi//pillow",
+        "@pypi//django_prometheus",
     ],
 )
