--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -191,6 +191,17 @@ jobs:
                   chmod +x target-determinator.linux.amd64
                   sudo mv target-determinator.linux.amd64 /usr/local/bin/target-determinator
 
+            - name: Install uv for wheel building
+              if: steps.check-bazel.outputs.has_products == 'true'
+              uses: astral-sh/setup-uv@3259c6206f993105e3a61b142c2d97bf4b9ef83d # v7.1.0
+
+            - name: Pre-build wheels for sdist-only packages
+              if: steps.check-bazel.outputs.has_products == 'true'
+              run: |
+                  # Some packages only have sdist and use distutils (removed in Python 3.12)
+                  mkdir -p /tmp/bazel-wheels
+                  uv pip wheel thrift==0.20.0 zstd fastuuid psycopg2-binary -w /tmp/bazel-wheels
+
             - name: Generate requirements_lock.txt for Bazel
               if: steps.check-bazel.outputs.has_products == 'true'
               run: bazel run //:requirements.update
@@ -321,6 +332,13 @@ jobs:
 
             - name: Generate requirements_lock.txt for Bazel
               run: bazel run //:requirements.update
+
+            - name: Pre-build wheels for sdist-only packages
+              run: |
+                  # Some packages (thrift, zstd, fastuuid) only have sdist on PyPI and use
+                  # distutils which was removed in Python 3.12. Build wheels with uv.
+                  mkdir -p /tmp/bazel-wheels
+                  uv pip wheel thrift==0.20.0 zstd fastuuid psycopg2-binary -w /tmp/bazel-wheels
 
             - name: Run Bazel tests
               run: |
