fix: make s3 path generation more secure

--- a/rust/capture/Cargo.toml
+++ b/rust/capture/Cargo.toml
@@ -48,6 +48,7 @@ chrono = { workspace = true }
 lz-str = { workspace = true }
 multer = "3.0"
 futures = { workspace = true }
+sha2 = { workspace = true }
 
 [dev-dependencies]
 assert-json-diff = { workspace = true }
