--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -141,3 +141,4 @@ clickhouse = { version = "0.13.2", features = [
 # Used for decrypting django encrypted fields
 fernet = "0.2"
 tiktoken-rs = "0.7.0"
+sha2 = "0.10"
