--- a/.github/workflows/foss-sync.yml
+++ b/.github/workflows/foss-sync.yml
@@ -15,27 +15,36 @@ jobs:
         name: Sync posthog-foss with posthog
         if: github.repository == 'PostHog/posthog'
         runs-on: ubuntu-24.04
+        permissions:
+            contents: read
         steps:
+            - name: Get app token
+              id: app-token
+              uses: getsentry/action-github-app-token@d4b5da6c5e37703f8c3b3e43abb5705b46e159cc # v3
+              with:
+                  app_id: ${{ secrets.GH_APP_POSTHOG_FOSS_SYNC_APP_ID }}
+                  private_key: ${{ secrets.GH_APP_POSTHOG_FOSS_SYNC_PRIVATE_KEY }}
+
             - name: Sync repositories 1 to 1 - master branch
               uses: PostHog/git-sync@v3
               with:
-                  source_repo: 'https://posthog-bot:${{ secrets.POSTHOG_BOT_PAT }}@github.com/posthog/posthog.git'
+                  source_repo: 'https://x-access-token:${{ github.token }}@github.com/posthog/posthog.git'
                   source_branch: 'master'
-                  destination_repo: 'https://posthog-bot:${{ secrets.POSTHOG_BOT_PAT }}@github.com/posthog/posthog-foss.git'
+                  destination_repo: 'https://x-access-token:${{ steps.app-token.outputs.token }}@github.com/posthog/posthog-foss.git'
                   destination_branch: 'master'
             - name: Sync repositories 1 to 1 – tags
               uses: PostHog/git-sync@v3
               with:
-                  source_repo: 'https://posthog-bot:${{ secrets.POSTHOG_BOT_PAT }}@github.com/posthog/posthog.git'
+                  source_repo: 'https://x-access-token:${{ github.token }}@github.com/posthog/posthog.git'
                   source_branch: 'refs/tags/*'
-                  destination_repo: 'https://posthog-bot:${{ secrets.POSTHOG_BOT_PAT }}@github.com/posthog/posthog-foss.git'
+                  destination_repo: 'https://x-access-token:${{ steps.app-token.outputs.token }}@github.com/posthog/posthog-foss.git'
                   destination_branch: 'refs/tags/*'
             - name: Checkout posthog-foss
-              uses: actions/checkout@v4
+              uses: actions/checkout@v6
               with:
                   repository: 'posthog/posthog-foss'
                   ref: master
-                  token: ${{ secrets.POSTHOG_BOT_PAT }}
+                  token: ${{ steps.app-token.outputs.token }}
             - name: Change LICENSE to pure MIT
               run: |
                   sed -i -e '/PostHog Inc\./,/Permission is hereby granted/c\Copyright (c) 2020-2021 PostHog Inc\.\n\nPermission is hereby granted, free of charge, to any person obtaining a copy' LICENSE
@@ -51,4 +60,4 @@ jobs:
                   message: 'Sync and remove all non-FOSS parts'
                   remove: '["-r ee/"]'
                   default_author: github_actions
-                  github_token: ${{ secrets.POSTHOG_BOT_PAT }}
+                  github_token: ${{ steps.app-token.outputs.token }}
