--- a/.github/workflows/ci-turbo.yml
+++ b/.github/workflows/ci-turbo.yml
@@ -11,6 +11,8 @@ jobs:
             matrix:
                 # os: [depot-ubuntu-22.04, depot-ubuntu-22.04-4]
                 os: [depot-ubuntu-22.04-4]
+        permissions:
+            contents: read
 
         steps:
             - name: Check out code
@@ -40,7 +42,6 @@ jobs:
               uses: actions/setup-python@v5
               with:
                   python-version-file: 'pyproject.toml'
-                  token: ${{ secrets.POSTHOG_BOT_PAT }}
 
             - name: Install uv
               id: setup-uv
