--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
     "clickhouse-driver==0.2.9",
     "clickhouse-pool==0.5.3",
     "conditional-cache==1.2",
-    "cryptography==39.0.2",
+    "cryptography>=41.0.7",
     "dagster==1.10.18",
     "dagster-cloud==1.10.18",
     "dagster-aws==0.26.18",
@@ -185,6 +185,7 @@ dependencies = [
     "duckdb>=1.3.0",
     "bingads>=13.0.25.3",
     "markdown-to-mrkdwn>=0.2.0",
+    "webauthn>=2.1.0,<2.3.0",
 ]
 
 [dependency-groups]
