feat(openapi): improve generated file headers and CI feedback
- add helpful header to generated files with contact info and regen command
- improve CI error message when types are out of date
- suppress verbose Django warnings in openapi-schema generation

--- a/common/hogli/manifest.yaml
+++ b/common/hogli/manifest.yaml
@@ -278,7 +278,7 @@ build:
         description: Generate all schema definitions (frontend JSON, Python, latest versions)
     build:openapi-schema:
         cmd: |
-            DEBUG=1 OPENAPI_INCLUDE_INTERNAL=1 python manage.py spectacular --file frontend/tmp/openapi.json --format openapi-json && echo "OpenAPI schema written to frontend/tmp/openapi.json"
+            DEBUG=1 OPENAPI_INCLUDE_INTERNAL=1 python manage.py spectacular --file frontend/tmp/openapi.json --format openapi-json 2>/dev/null && echo "OpenAPI schema written to frontend/tmp/openapi.json"
         description: Generate OpenAPI schema from Django backend (writes to gitignored temp location)
         services:
             - postgresql
