--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -433,7 +433,16 @@ jobs:
                   ./bin/hogli build:openapi
                   if ! git diff --exit-code; then
                       echo ""
-                      echo "::error::OpenAPI types are out of date. Run 'hogli build:openapi' locally to update."
+                      echo "::error::OpenAPI types are out of date!"
+                      echo ""
+                      echo "The TypeScript API types in products/*/frontend/generated/ are auto-generated"
+                      echo "from Django serializers and views. When you modify the backend API, you need"
+                      echo "to regenerate these types."
+                      echo ""
+                      echo "To fix, run locally:  hogli build:openapi"
+                      echo "Then commit the updated generated files."
+                      echo ""
+                      echo "Questions? #team-devex on Slack"
                       exit 1
                   fi
 
